updates to copy across converter flow, adding context, opening errors in new tabs, etc.

--- a/open_trails/templates/dataset-01-upload-segments.html
+++ b/open_trails/templates/dataset-01-upload-segments.html
@@ -84,7 +84,7 @@
                 <li>This tool expects to receive a shapefile with many features, each representing a segment of trail.</li>
                 <li>Moreover, we expect many segments to only compose a portion of a trail. We will pull out all of the trail names, and create a seperate file called "named_trails.csv", associating each segment with the trail in its entirety.</li>
                 <li>We expect each of those segments to have attributes about their location, condition, and appropriate use.</li>
-                <li>In fact, our initial input model is based on PRORAGIS, the GIS data model recommended by our partners, the <a href="http://nrpa.org"></a>National Recreation and Parks Association</a>.
+                <li>In fact, our initial input model is based on PRORAGIS, the GIS data model recommended by our partners, the <a href="http://nrpa.org">National Recreation and Parks Association</a>.
                 <li>We expect the shapefiles uploaded to have many attributes not included in OpenTrails, which will be omitted.</li>
             </ul>
         </div>
