--- a/open_trails/templates/dataset-02-show-sample-segment.html
+++ b/open_trails/templates/dataset-02-show-sample-segment.html
@@ -62,10 +62,12 @@
     </div>
     <section class="layout-semibreve">
         <h4>Review your uploaded data.</h4>
-        <p>You've uploaded a shapefile that contains the data we need to get started with the conversion. Before we move forward, review the sample data below. We've included all of the field names from the data you uploaded, along with a sample value. Here are a couple of questions to keep in mind:</p>
+        <p>You've uploaded a shapefile that contains the data we need to get started with the conversion.</p>
+
+        <p>Before we move forward, review the sample data below. We've included all of the field names from the data you uploaded, along with a few sample values. Here are a couple of questions to keep in mind:</p>
         <ul>
-            <li>Do the segments contain the name of the trail they are a part of?</li>
-            <li>Do the segments have attributes describing appropriate or allowed use?</li>
+            <li>Do the segments contain the name of the trail they are a part of? Names are used to group segments into full trails.</li>
+            <li>Do the segments have attributes describing appropriate or allowed use? These fields are not required, but are recommended.</li>
         </ul>
     </section>
 
