--- a/open_trails/templates/error-missing-file-trail-segments.html
+++ b/open_trails/templates/error-missing-file-trail-segments.html
@@ -32,6 +32,91 @@
 <html>
 	<body>
 		{% include "headline-validator.html" %}
+<section class="layout-semibreve">
+            <h3>You are missing a trail_segments.geojson file.</h3>
+            <p>Trail segments are a critical component of OpenTrails data. Trail segments represent the geometry and alignment of trails. They are grouped into Named Trails that provide visitors with an understanding of the location and extent of your trail system.</p>
+            <p>For more information, please review <a href="https://docs.google.com/a/codeforamerica.org/document/d/1KF8KAio-SqGHhh9oFY_KjfwIi3PePOHg7KfTSPh27fc/edit">the Open Trail System Specification (OpenTrails) in detail</a>.</p>
+        </section>
+        <section class="layout-semibreve">
+            <h3>trail_segments.geojson</h3>
+            <h4 class="h5">Required File</h4>
+            <table>
+                <thead>
+                    <tr>
+                        <td style="font-size:12px">Name</td>
+                        <td style="font-size:12px">Type</td>
+                        <td style="font-size:12px">Req'd?</td>
+                        <td style="font-size:12px">Summary</td>
+                        <td style="font-size:12px">Values</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>id</th>
+                        <td>string</td>
+                        <td>yes</td>
+                        <td>A unique identifier assigned by the data producer. The “Named Trails” described in named_trails.csv are constructed with arrays of trail segments, identified via this field.</td>
+                        <td><i>n/a</i></td>
+                    </tr>
+                    <tr>
+                        <th>steward_id</th>
+                        <td>string</td>
+                        <td>yes</td>
+                        <td>id of agency or organization responsible for trail maintenance, regulation, and safety. These values are defined in <a href="#stewards">stewards.csv</a></td>
+                        <td><i>n/a</i></td>
+                    </tr>
+                    <tr>
+                        <th>motor_vehicles</th>
+                        <td>string-encoded boolean</td>
+                        <td></td>
+                        <td>A judgement as to the appropriate use of OHV, ATVs, and snowmobiles on this trail segment.</td>
+                        <td>"yes" or "no"</td>
+                    </tr>
+                    <tr>
+                        <th>foot</th>
+                        <td>string-encoded boolean</td>
+                        <td></td>
+                        <td>Indicates whether walking and hiking is an appropriate use of this trail segment.</td>
+                        <td>"yes" or "no"</td>
+                    </tr>
+                    <tr>
+                        <th>bicycle</th>
+                        <td>string-encoded boolean</td>
+                        <td></td>
+                        <td>Indicates whether general bicycling is an appropriate use of this trail segment.</td>
+                        <td>"yes" or "no"</td>
+                    </tr>
+                    <tr>
+                        <th>horse</th>
+                        <td>string-encoded boolean</td>
+                        <td></td>
+                        <td>Indicates whether horseback riding or equestrian travel is an appropriate use of this trail segment.</td>
+                        <td>"yes" or "no"</td>
+                    </tr>
+                    <tr>
+                        <th>ski</th>
+                        <td>string-encoded boolean</td>
+                        <td></td>
+                        <td>Indicates whether over-land or cross-country skiing is an appropriate use of this trail segment.</td>
+                        <td>"yes" or "no"</td>
+                    </tr>
+                    <tr>
+                        <th>wheelchair</th>
+                        <td>string-encoded boolean</td>
+                        <td></td>
+                        <td>Indicates whether this trail segment is considered wheelchair accessible. This field is derived from OpenStreetMap conventions. Other attributes that describe accessibility can be included in the 'osmTags" field.</td>
+                        <td>"yes", "no", "permissive", "designated"</td>
+                    </tr>
+                    <tr>
+                        <th>osm_tags</th>
+                        <td>string-encoded array</td>
+                        <td></td>
+                        <td>This field is designed to incorporate a fungible number of key-value pairs to further describe features. OpenTrails recommends using pre-defined sets of OpenStreetMap tags for this purpose, defined in the <a href="https://docs.google.com/a/codeforamerica.org/document/d/1KF8KAio-SqGHhh9oFY_KjfwIi3PePOHg7KfTSPh27fc/edit#bookmark=id.saceiw7dq99"></a>appdenices.</td>
+                        <td><i>n/a</i></td>
+                    </tr>
+                </tbody>
+            </table>
+        </segments>
 		{% include "script-olark.html" %}
 	</body>
 </html>
