--- a/open_trails/templates/error-incorrect-csv-file.html
+++ b/open_trails/templates/error-incorrect-csv-file.html
@@ -32,6 +32,10 @@
 <html>
 	<body>
 		{% include "headline-validator.html" %}
+        <section class="layout-semibreve">
+            <h3>There is a problem with the structure of one or more of your .csv files.</h3>
+            <p>For more information, please review <a href="https://docs.google.com/a/codeforamerica.org/document/d/1KF8KAio-SqGHhh9oFY_KjfwIi3PePOHg7KfTSPh27fc/edit">the Open Trail System Specification (OpenTrails) in detail</a>.</p>
+        </section>
 		{% include "script-olark.html" %}
 	</body>
 </html>
