included helper copy regarding data uploads over poor connections

--- a/open_trails/templates/dataset-01-upload-segments.html
+++ b/open_trails/templates/dataset-01-upload-segments.html
@@ -62,6 +62,7 @@
                 <input type=submit value=Upload>
             </p>
             </form>
+            <small>Note: data uploads make take a minute on poor connections.</small>
         </div>
     </div>
 
