--- a/open_trails/templates/check-01-upload-opentrails.html
+++ b/open_trails/templates/check-01-upload-opentrails.html
@@ -43,6 +43,7 @@
                     <input type=submit value=Upload></input>
                 </p>
             </form>
+            <small>Note: data uploads make take a minute on poor connections.</small>
         </section>
     </div>
     <section class="layout-semibreve">
