content authored for validator upload page

--- a/open_trails/templates/check-01-upload-opentrails.html
+++ b/open_trails/templates/check-01-upload-opentrails.html
@@ -47,14 +47,16 @@
         </section>
     </div>
     <section class="layout-semibreve">
-        <div class="layout-minim">
-            <h4>First thing</h4>
-            <p>More about the first thing.</p>
-        </div>
-        <div class="layout-minim">
-            <h4>Second thing</h4>
-            <p>More about the second thing.</p>
-        </div>
+        <h4>Upload a .zip file</h4>
+        <p>This validator will evaluate the data you upload for conformance with the OpenTrails specification. To that end, it expects a single .zip file containing:</p>
+        <ul>
+            <li>trail_segments.geojson</li>
+            <li>named_trails.csv</li>
+            <li>trailheads.geojson</li>
+            <li>stewards.csv</li>
+            <li>areas.geojson (optional)</li>
+        </ul>
+        <p>If you are missing one or more of these files, you may still upload a .zip to evaluate the data you have included.</p>
     </section>
 </body>
 </html>
