amended copy on 'bad-data' message pages to include missing optional properties

--- a/open_trails/templates/error-bad-data-trail-segments.html
+++ b/open_trails/templates/error-bad-data-trail-segments.html
@@ -33,7 +33,7 @@
 	<body>
 		{% include "headline-validator.html" %}
         <section class="layout-semibreve">
-            <h3>One or more properties in trail_segments.geojson contains a value that is not allowed.</h3>
+            <h3>One or more properties in trail_segments.geojson contains a value that is not allowed, or a property is missing.</h3>
             <p>For more information, please review <a href="https://docs.google.com/a/codeforamerica.org/document/d/1KF8KAio-SqGHhh9oFY_KjfwIi3PePOHg7KfTSPh27fc/edit">the Open Trail System Specification (OpenTrails) in detail</a>.</p>
         </section>
         <section class="layout-semibreve">
