reverted validator headline copy to pass tests

--- a/open_trails/templates/check-02-validated-opentrails.html
+++ b/open_trails/templates/check-02-validated-opentrails.html
@@ -33,7 +33,7 @@
     {% include "headline-validator.html" %}
 
         <section class="layout-semibreve">
-            <h3>Feedback on your data</h3>
+            <h3>Validatation Notes</h3>
             {% include "messages-list.html" %}
         </section>
 
