--- a/open_trails/templates/error-missing-segment-ski.html
+++ b/open_trails/templates/error-missing-segment-ski.html
@@ -9,7 +9,7 @@
  	<!-- LEAFLET -->
 
     <!-- CODE FOR AMERICA STYLES -->
-    <link rel="stylesheet" type="text/css" href="//cloud.typography.com/6435252/678502/css/fonts.css" />
+    <link rel="stylesheet" type="text/css" href="//cloud.webtype.com/css/944a7551-9b08-4f0a-8767-e0f83db4a16b.css" />
     <link rel="stylesheet" href="http://style.codeforamerica.org/1/style/css/main.css">
     <link rel="stylesheet" href="http://style.codeforamerica.org/1/style/css/layout.css" media="all and (min-width: 40em)">
     <link href="http://style.codeforamerica.org/1/style/css/prism.css" rel="stylesheet" />
