updated error page templates for trailhead fields, whitespace removal only in transformers.py

--- a/open_trails/templates/error-missing-segment-id.html
+++ b/open_trails/templates/error-missing-segment-id.html
@@ -62,7 +62,7 @@
 							segment_id
 						</td>
 						<td>
-							string matching a value in the “id” field of stewards.csv
+							A unique identifier assigned by the data producer.
 						</td>
 						<td>
 							yes
