This was never even a link?

--- a/open_trails/templates/dataset-05-stewards.html
+++ b/open_trails/templates/dataset-05-stewards.html
@@ -67,7 +67,7 @@
                 <h3 class="badge-heading-h3-fix">Download your data in OpenTrails!</h3>
             </div>
             <br>
-            <button><a href="/datasets/{{ dataset.id }}/open-trails.zip"></a>Download open-trails.zip</button>
+            <a href="/datasets/{{ dataset.id }}/open-trails.zip" class="button">Download open-trails.zip</a>
             <p>In the .zip file, you'll find the following files:</p>
             <ul>
                 <li><code>trail_segments.geojson</code>, which contains your trail segment geometries</li>
