--- a/open_trails/templates/dataset-02-show-sample-segment.html
+++ b/open_trails/templates/dataset-02-show-sample-segment.html
@@ -33,20 +33,25 @@
     {% include "file-tabs.html" %}
 
 <!-- Step Tracker  -->
-    <ol class="steps-tracker" data-steps="5">
-        <li id="step1"class="step-done icon-checkmark h6">Upload
-            <br>Shapefiles
+    <ol class="steps-tracker" data-steps="7">
+        <li id="step1"class="step-done icon-checkmark st-text"><small>Upload
+            <br>segments shapefile</small>
         </li><!--
-     --><li id="step2" class="step-active h6">Convert to
-            <br>trail_segments.geojson
+     --><li id="step2" class="step-active st-text"><small>Convert to
+            <br>trail_segments.geojson</small>
         </li><!--
-     --><li id="step3" class="step-todo h6">Extract
-            <br>named_trails.csv</li><!--
-     --><li id="step4" class="step-todo h6">Create 
-            <br>stewards.csv</li><!--
-     --><li id="step5" class="step-todo h6">Download 
-            <br>OpenTrails.zip</li>
+     --><li id="step3" class="step-todo st-text"><small>Extract
+            <br>named_trails.csv</small></li><!--
+     --><li id="step4" class="step-todo st-text"><small>Create
+            <br>stewards.csv</small></li><!--
+     --><li id="step5" class="step-todo st-text"><small>Upload
+            <br>trailheads shapefile</small></li><!--
+     --><li id="step6" class="step-todo st-text"><small>Conver to
+            <br>trailheads.geojson</small></li><!--
+     --><li id="step7" class="step-todo st-text"><small>Download
+            <br>opentrails.zip</small></li>
     </ol>
+
 
     <div class="slab-gray">
         <section class="layout-semibreve">
