updated filetype component of step-tracker to reflect inclusion of trailhead transformation

--- a/open_trails/templates/dataset-01-upload-segments.html
+++ b/open_trails/templates/dataset-01-upload-segments.html
@@ -31,7 +31,20 @@
 
 <body>
     {% include "headline-converter.html" %}
-    {% include "file-tabs.html" %}
+    <div class="layout-semibreve semibreve-reduced">
+        <div class="file-titles"  id="trailsegments-title">
+            <h5 class="current-file-title">Trail Segments</h5>
+            <h6>In Progress</h6>
+        </div>
+        <div class="file-titles" id="trailheads-title">
+            <h5 class="other-file-title">Trailheads</h5>
+            <h6 class="coming-soon">Up Next</h6>
+        </div>
+        <div class="file-titles" id="areas-title">
+            <h5 class="other-file-title">Areas</h5>
+            <h6 class="coming-soon">Coming Soon</h6>
+        </div>
+    </div>
 
 <!-- Step tracker -->
 
