--- a/open_trails/templates/dataset-05-stewards.html
+++ b/open_trails/templates/dataset-05-stewards.html
@@ -33,15 +33,15 @@
     {% include "headline-converter.html" %}
     <div class="layout-semibreve semibreve-reduced">
         <div class="file-titles"  id="trailsegments-title">
-            <h4 class="current-file-title">Trail Segments</h4>
+            <h5 class="current-file-title">Trail Segments</h5>
             <h6 class="file-status-success">Complete</h6>
         </div>
         <div class="file-titles" id="trailheads-title">
-            <h4 class="other-file-title">Trailheads</h4>
-            <h6 class="coming-soon">coming soon</h6>
+            <h5 class="other-file-title">Trailheads</h5>
+            <h6>In Progress</h6>
         </div>
         <div class="file-titles" id="areas-title">
-            <h4 class="other-file-title">Areas</h4>
+            <h5 class="other-file-title">Areas</h5>
             <h6 class="coming-soon">Coming Soon</h6>
         </div>
     </div>
